--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
-    <artifactId>Trabalho1Projeto</artifactId>
+    <artifactId>TrabalhoProjeto</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <exec.mainClass>com.mycompany.testexml.Testexml</exec.mainClass>
+        <exec.mainClass>com.mycompany.trabalhoprojeto.TrabalhoProjeto</exec.mainClass>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.json/json -->
@@ -30,5 +30,5 @@
             <version>3.36.0.3</version>
         </dependency>
     </dependencies>
-    <name>Trabalho1Projeto</name>
+    <name>trabalhoProjeto</name>
 </project>
